--- a/style.css
+++ b/style.css
@@ -33,7 +33,8 @@ h6, .color-2{
     font-size: 18px;
     font-weight: 400;
     color: grey;
-    line-height: 20px;
+    line-height: 25px;
+    margin-bottom: 20px;
     
 }
 body{
@@ -121,6 +122,7 @@ list-style: none;
 }
 #details{
     display: flex;
+     margin-top: 50px;
     margin-left: 300px;
     margin-right: 300px;
     align-items: center;
@@ -227,7 +229,8 @@ list-style: none;
 .btn-1 > img{
     width: 20px;
     height: 20px;
-    margin: -1px;
+        margin: -2px 18px;
+    filter: brightness(0) invert(1);
     }
 
 header .shopping-cart{
@@ -388,4 +391,6 @@ header .shopping-cart.active{
     border: 5px solid orange;  
 }
 
-  
+  .title{
+margin-bottom: 20px
+}
